# AprilTag

./: .gitignore  README.md
sample/buildDLL/: CMakeLists.txt
sample/buildDLL/install/include/: aprilTagLocator.hpp
sample/buildDLL/install/include/apriltag/: CPackConfig.cmake
sample/buildDLL/libaprilTagLocator/: aprilTagLocator.cpp  aprilTagLocator.hpp
sample/buildDLL/libaprilTagLocator/apriltag/: CMakeCache.txt  CPackSourceConfig.cmake  DartConfiguration.tcl  apriltag.c
sample/runWithDLL/: CMakeLists.txt  main.cpp
sample/runWithoutDLL/: CMakeLists.txt
sample/runWithoutDLL/inc/apriltag/: apriltag_quad_thresh.c
sample/runWithoutDLL/src/: aprilTagLocator.cpp
